Bugfix: Distorted images on product view

--- a/skin/frontend/default/eventswired/css/custom.css
+++ b/skin/frontend/default/eventswired/css/custom.css
@@ -885,7 +885,8 @@ p.callout { font-size:18px; line-height:24px; }
   width: 672px;
 }
 #carousel ul { list-style:none; padding:0; margin:0; }
-#carousel ul li { float:left; height:450px; width:672px; }
+#carousel ul li { float:left; height:450px; width:672px; position:relative; }
+#carousel ul li img { position:absolute; top:0; left:-180px; }
 
 #carousel .carousel-previous {
   background: url(../images/css-sprites.png) -125px -329px no-repeat;
